@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Fixed the SQL query in the Tutorial plugin.
+
  - Fix timestamp formatting in the console results.
 
 2017/07/10 1.4.0
